# pose-anonymization

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml
assets/example/: interpreter.pose
assets/example/anonymized/: essen.pose  kinder.pose  kleine.pose  pizza.pose
assets/example/interpreter/: essen.pose  kinder.pose  kleine.pose  pizza.pose
assets/example/original/: essen.pose  kinder.pose  kleine.pose  pizza.pose
pose_anonymization/: appearance.py  bin.py  evaluate_example_stitching.py
pose_anonymization/data/: __init__.py  calc_mean_std.py  draw_mean_pose.py  header.poseheader  normalization.py  pose_normalization.json
scripts/: create_example.sh  extract_middle_frame.py
