[project]
name = "pose-anonymization"
description = "Remove identifying information from sign language poses"
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" },
]
readme = "README.md"
dependencies = [
    "pose-format",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "matplotlib",
    "spoken_to_signed @ git+https://github.com/ZurichNLP/spoken-to-signed-translation",
    "sign_vq @ git+https://github.com/sign-language-processing/sign-vq" # For pose anonymization, not transfer
]

[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
]

[tool.setuptools]
packages = [
    "pose_anonymization",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["pose_anonymization"]

[project.scripts]
anonymize_pose = "pose_anonymization.bin:main"
